--- a/index.html
+++ b/index.html
@@ -50,5 +50,13 @@
     </map>
         </div>
 
+        <div>
+            <img src="/media/Hanuman.jpg" alt="Hanuman" usemap="#first_Box" style="display: block; margin-left: auto;margin-right: auto;" >
+            <map name="first_Box">
+                <area shape="poly" coords="" href="/Home/home.html">
+            </map>
+                </div>
+        
+
 </body>
 </html>
