--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
                 <area shape="poly" coords="" href="/Home/home.html">
             </map>
                 </div>
-        
+                <div>
+
+
+                    <!-- Branch Checking  -->
+                    <img src="/media/Hanuman.jpg" alt="Hanuman" usemap="#first_Box" style="display: block; margin-left: auto;margin-right: auto;" >
+                    <map name="first_Box">
+                        <area shape="poly" coords="" href="/Home/home.html">
+                    </map>
+                        </div>
 
 </body>
 </html>
